
2020-12-22  Ron Norman <rjn@inglenet.com>
	* fisam.c:	Added isam_version to return the ISAM handler version
	* fbdb.c:	Added bdb_version to return the Berkley Database version
	* foci.c:	Added oci_version to return the Oracle version
	* fodbc.c:	Added odbc_version to return the ODBC version
	* fileio.h:	New io_version function pointer
	* fileio.c: added cob_io_version to load if needed and return 
				module version string
	* common.c:	Now calls each I/O module to get its version information

2020-12-21  Ron Norman <rjn@inglenet.com>
	* fisam.c: If isbuild returns EBADARG, then iserase and retry
	* fileio.c: More changes for "format=vbcisam"

2020-12-16  Ron Norman <rjn@inglenet.com>
	* common.h: Changes to handle VBISAM in CISAM mode
	* common.c: Changes to report using VBISAM in CISAM mode
	* fileio.c: Changes to handle "format=vbcisam"
			    and to load libcobvc.so at startup
	* fisam.c: Changes for building with VBISAM in CISAM mode
	* Makefile.am: Changes for configure/build of VBISAM in CISAM mode
				
2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	Bug #692 missing output for DISPLAY WITH NO ADVANCING
	* termio.c (cob_accept): always flush to ensure buffered output is seen

2020-12-14  Ron Norman <rjn@inglenet.com>

	* fodbc.c: fixed problem with 'commit' not being done
	* fsqlxfd.c: speed up copy of PIC X fields instead of using cob_move

2020-12-09  Ron Norman <rjn@inglenet.com>

	* common.c: If the system supports sigaction then codegen.c emits
	  code to catch an abort while dumping and recover
	  the routine cob_set_dump_signal sets up the signal processing;
	  Added cob_get_sig_name and cob_get_sig_description;
	  Rewrote cob_set_signal to be table driven

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
	  to be checked for "same as" and to allow that also with nested OCCURS

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>
